# libmemory

./: .clang-tidy  .gitignore  .gitmodules  Makefile  README.md  meson.build  meson_options.txt  premake5.lua
dependencies/lib/linkedlist/: ll.h
dependencies/rtos/threadx/: tx_api.h  tx_port.h
docs/: CI.jenkinsfile  CONTRIBUTING.md  Doxyfile  Jenkinsfile
docs/architecture/decisions/: 0002-expect-external-libc-to-be-supplied-through-subproject-or-cross-file.md  0003-locking-approach-for-malloc-freelist.md
docs/project-history/2020/2020-05/: 2020-05-07T21:29:51Z_note_ifQI_u2VH1laveha.md  2020-05-07T21:30:06Z_note_LSl4JgsEbtTIfk53.md  2020-05-07T21:30:59Z_note_a7u2aADUPfUH38cq.md
include/: aligned_malloc.h  malloc.h  meson.build
src/: aligned_malloc.c  malloc.h  malloc_addblock_init_assert.c  malloc_assert.c  malloc_framework_rtos.cpp  malloc_freelist.c  malloc_freelist.h  malloc_freertos.c  malloc_threadx.c  meson.build  posix_memalign.c
subprojects/: c-linked-list.wrap  libc.wrap
test/: main.c  main_locking.c  meson.build  tests.h
test/src/: aligned_malloc.c  malloc_freelist.c  malloc_freelist_locking.c
test/support/: memory.c  memory.h
tools/: CI.jenkinsfile  Jenkinsfile  clang-format-libmemory-patch.sh  clang-format-libmemory.sh  complexity_check.sh  cppcheck_xml.sh
