option('enable-pedantic', type: 'boolean', value: false, yield: true, 
    description: 'Enable pedantic warnings')
option('enable-pedantic-error', type: 'boolean', value: false, yield: true, 
    description: 'Enable pedantic warnings and make them errors.')
option('use-libc-subproject', type: 'boolean', value: false, yield: true,
    description: 'When true, use the subproject defined in the libc-subproject option. An alternate approach is to override c_stdlib in your cross files.')
option('libc-subproject', type: 'array', 
    value: ['libc', 'libc_dep', 'libc_hosted_native_dep'],
    yield: true, 
    description: 'This array is used in combination with use-libc-subproject. The first entry is the subproject name. The second is the cross-compilation dependency to use. The third value is optional. If used, it is a native dependency to use with native library targets.')
option('freelist-declared-static', type:'boolean', value: true, yield: true,
    description: 'Set to false to make the freelist data structure accessible outside of the malloc_freelist.c file. By default, it has static linkage.')
